tests/health/gold/sdk/external__downloads__toit-e-paper__examples__movement.toit.gold
external/downloads/toit-e-paper/examples/movement.toit:7:8: error: Package for prefix 'peripherals' not found
import peripherals show Accelerometer
       ^~~~~~~~~~~
external/downloads/toit-e-paper/examples/movement.toit:9:8: error: Package for prefix 'job' not found
import job
       ^~~
external/downloads/toit-e-paper/examples/movement.toit:44:12: error: Unresolved identifier: 'Accelerometer'
    acc := Accelerometer.start
           ^~~~~~~~~~~~~
external/downloads/toit-e-paper/examples/movement.toit:57:14: error: Unresolved type: 'Accelerometer'
movement acc/Accelerometer -> float:
             ^~~~~~~~~~~~~
